--- a/Algorithms and Structures by PCMS/Algorithms and Structures by PCMS.csproj
+++ b/Algorithms and Structures by PCMS/Algorithms and Structures by PCMS.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{FAB53C2A-E6AB-42D5-BD2E-D5399B8812DC}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>ASD</RootNamespace>
-    <AssemblyName>ASD</AssemblyName>
+    <RootNamespace>AlgorithmsAndStructuresByPCMS</RootNamespace>
+    <AssemblyName>AlgorithmsAndStructuresByPCMS</AssemblyName>
     <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
