[refactor] Little refactor and some todo

--- a/Algorithms and Structures by PCMS/Algorithms and Structures by PCMS.csproj
+++ b/Algorithms and Structures by PCMS/Algorithms and Structures by PCMS.csproj
@@ -44,7 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BinarySearch\BinarySearch.cs" />
-    <Compile Include="BinarySearch\Garland.cs" />
+    <Compile Include="BinarySearch\BinarySearchForGarland.cs" />
     <Compile Include="DataStructures\BracketsSequence.cs" />
     <Compile Include="DataStructures\PriorityQueue.cs" />
     <Compile Include="DataStructures\ReversePolishNotation.cs" />
